<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nearby"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_nearby" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_offers" />
        <item
            android:id="@+id/nav_add_offer"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_add_offer" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
